--- a/javascript/apps/taiga/src/app/styles/taiga-ui/tui-scrollbar.css
+++ b/javascript/apps/taiga/src/app/styles/taiga-ui/tui-scrollbar.css
@@ -20,9 +20,3 @@ tui-scroll-controls {
     }
   }
 }
-
-tui-scrollbar {
-  & .content {
-    padding-inline-end: var(--spacing-16);
-  }
-}
